<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="@dimen/title_screen_total_vw">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/title_screen_space_vw"
        android:gravity="center">

        <be.ghavelan.fastfill.CustomTextView
            android:id="@+id/title_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_screen_font_title"
            customfontdemo:fontName="OpenSans-Bold.ttf" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/title_screen_menu_vw"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/title_screen_space_width"
            android:layout_height="match_parent">
        </View>

        <View
            android:layout_width="@dimen/title_screen_square_width"
            android:layout_height="match_parent"
            android:background="@color/red">
        </View>

        <be.ghavelan.fastfill.CustomTextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/title_screen_padding"
            android:layout_marginStart="@dimen/title_screen_padding"
            android:text="@string/start"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_screen_font_menu"
            customfontdemo:fontName="OpenSans-Regular.ttf"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/title_screen_inter">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/title_screen_menu_vw"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/title_screen_space_width"
            android:layout_height="match_parent">
        </View>

        <View
            android:layout_width="@dimen/title_screen_square_width"
            android:layout_height="match_parent"
            android:background="@color/blue">
        </View>

        <be.ghavelan.fastfill.CustomTextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/title_screen_padding"
            android:layout_marginStart="@dimen/title_screen_padding"
            android:text="@string/instructions"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_screen_font_menu"
            customfontdemo:fontName="OpenSans-Regular.ttf"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/title_screen_inter">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/title_screen_menu_vw"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/title_screen_space_width"
            android:layout_height="match_parent">
        </View>

        <View
            android:layout_width="@dimen/title_screen_square_width"
            android:layout_height="match_parent"
            android:background="@color/yellow">
        </View>

        <be.ghavelan.fastfill.CustomTextView
            android:id="@+id/best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/title_screen_padding"
            android:layout_marginStart="@dimen/title_screen_padding"
            android:text="@string/best_score"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_screen_font_menu"
            customfontdemo:fontName="OpenSans-Regular.ttf"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/title_screen_space_vw">

    </View>

</LinearLayout>