<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical">

    <LinearLayout
        android:id="@+id/gv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:stretchColumns="*">

            <TableRow>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/score_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/score"
                    android:textColor="@color/red"
                    android:textSize="@dimen/gv_text_size"
                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/grid_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/grid"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/gv_text_size"
                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

            </TableRow>

            <TableRow>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/score_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/red"
                    android:textSize="@dimen/gv_text_size"
                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/grid_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/gv_text_size"
                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/pause_content_description" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:stretchColumns="*">

            <TableRow>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/live_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lives"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/gv_text_size"
                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/time_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/gv_text_size"
                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

            </TableRow>

            <TableRow>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/live_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/gv_text_size"
                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

                <be.ghavelan.fastfill.CustomTextView
                    android:id="@+id/time_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/gv_text_size"

                    customfontdemo:fontName="OpenSans-Bold.ttf"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gv_top"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/gv_lr_margin"
            android:layout_marginRight="@dimen/gv_lr_margin"
            android:layout_marginTop="@dimen/gv_top_margin"
            android:layout_weight="10">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/gv_shadow"
                android:layout_marginRight="@dimen/gv_shadow"
                android:antialias="true"
                android:background="@drawable/gradient"
                android:dither="true"
                android:tileMode="repeat">
            </View>

            <be.ghavelan.fastfill.GameView
                android:id="@+id/perimeter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/gv_shadow"
                android:background="@drawable/grid_background"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/gv_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gv_buttons_height"
            android:layout_marginBottom="@dimen/gv_button_margin"
            android:layout_marginLeft="@dimen/gv_lr_margin"
            android:layout_marginRight="@dimen/gv_lr_margin"
            android:layout_marginTop="@dimen/gv_buttons_top_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_red_normal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_red"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"/>

            <Button
                android:id="@+id/button_blue_normal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"/>

            <Button
                android:id="@+id/button_yellow_normal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_yellow"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"/>

            <Button
                android:id="@+id/button_white_normal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_white"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>